Career Page Alignment Issue Resolved

--- a/skit_website/skit_website_menu/static/src/scss/careers.scss
+++ b/skit_website/skit_website_menu/static/src/scss/careers.scss
@@ -127,6 +127,11 @@ input.sks-career-form {
 #one {
 	box-shadow: 2px 2px 6px 3px rgba(255, 255, 255, 0.2);
 	line-height: 4em;
+    width: 100%;
+}
+
+.sks-carieer-form-flds {
+	margin: 2%;
 }
 
 .it .btn-orange {
@@ -213,6 +218,10 @@ p {
 
 #uploader {
 	width: 100%;
+}
+
+.uploadDoc {
+	margin: 0%;
 }
 
 .sks-form-upload-btn {
